server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tomato
  namespace: tomato-ns
spec:
  type: ClusterIP
  ports:
  - port: 8765
  selector:
    app: tomato
